creacion de config

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
     <form action="/app/libros" method="POST">
         <label>Titulo <input type="text" name="titulo"></label>
         <label>Autor <input type="text" name="autor"></label>
+        <label>Anio <input type="text" name="anio"></label>
         <button>Ingresar</button>
     </form>
+
 </body>
 </html>
